--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,39 @@
 {
-  "name" : "coolms/cms-user",
-  "description" : "Authentication module based on Doctrine 2 ORM Module",
-  "type" : "library",
+  "name" : "coolms/user",
+  "description" : "CoolMS2 User Module",
   "version" : "0.1.0",
-  "require" : {
-    "php" : ">=5.4.0",
-    "doctrine/doctrine-orm-module" : ">=0.8.0",
-    "gedmo/doctrine-extensions" : ">=v2.3.9",
-    "coolms/cms-base" : ">=0.1.0"
-  },
-  "require-dev": {
-    "phpunit/phpunit" : "~3.7",
-    "zendframework/zendframework": ">=2.3"
-  },
-  "autoload" : {
-    "psr-0" : {
-      "CmsUser\\" : "src/"
-    }
-  },
+  "type" : "library",
+  "keywords" : [ "zf2", "coolms", "coolms2", "user" ],
+  "homepage" : "https://github.com/coolms/user",
+  "license" : "BSD-3-Clause",
   "authors" : [ {
     "name" : "Dmitry Popov",
     "email" : "d.popov@altgraphic.com",
-    "homepage" : "http://www.coolms.com/",
     "role" : "Developer"
   } ],
-  "keywords" : [ "framework", "zf2", "coolms", "coolms2", "cms-user" ],
-  "license" : "BSD-3-Clause",
-  "homepage" : "https://github.com/coolms/CmsUser"
+  "require" : {
+    "php" : ">=5.4.0",
+    "coolms/authentication" : "dev-master@dev",
+    "coolms/common" : "dev-master@dev"
+  },
+  "require-dev" : {
+    "phpunit/phpunit" : "~4.5"
+  },
+  "suggest": {
+    "coolms/doctrine-orm" : "coolms/doctrine-orm for using Doctrine 2 ORM",
+    "coolms/twbs" : "coolms/twbs for using Twitter Bootstrap"
+  },
+  "autoload" : {
+    "psr-4" : { "CmsUser\\" : "src/" }
+  },
+  "autoload-dev" : {
+    "psr-4": { "CmsUserTest\\" : "tests/" }
+  },
+  "repositories" : [ {
+    "type" : "vcs",
+    "url" : "https://www.github.com/coolms/authentication"
+  }, {
+    "type" : "vcs",
+    "url" : "https://www.github.com/coolms/common"
+  } ]
 }
